--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,16 @@ language: node_js
 node_js:
   - stable
   - "6.5.0"
+
+before_script:
+  - python -m SimpleHTTPServer &
+  - sleep 2
+
 cache:
   directories:
     - node_modules
-before_install:  
- - export CHROME_BIN=/usr/bin/google-chrome
- - export DISPLAY=:99.0
- - sh -e /etc/init.d/xvfb start
- - sudo apt-get update
- - sudo apt-get install -y libappindicator1 fonts-liberation
- - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
- - sudo dpkg -i google-chrome*.deb
 
+addons:
+  sauce_connect:
+    username: "Maartenconnect"
+    access_key: "4fd375a2-a635-42fb-860e-346e4d6691a6"
