--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "travis integration with github and node",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "test/first-test.js"
   },
   "repository": {
     "type": "git",
