--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "chromedriver": "^2.23.1",    
     "webdriverio": "^4.2.11"
   },
+  "capabilities": {
+    "proxy": {
+      "proxyType": "manual",
+      "httpProxy": "https://localhost.com:4445/"
+    }
+  },
   "engineStrict": true,
   "engines": {
     "node": ">=4.5.0"
