--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
-//    "chromedriver": "^2.23.1",
-//    "geckodriver": "^1.1.2",
+    "chromedriver": "^2.23.1",
+    "geckodriver": "^1.1.2",
     "selenium-webdriver": "^3.0.0-beta-2",
-//    "phantomjs": ">=2.1",
-//    "webdriverio": "^4.2.11",
+    "phantomjs": ">=2.1",
+    "webdriverio": "^4.2.11",
     "saucelabs": "1.3.0"
   },
   "devDependencies": {
