--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "travis integration with github and node",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 10000"
+    "test": "mocha test/first-test.js --timeout 10000"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,11 @@
   "dependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
-    "chromedriver": "^2.23.1",
-    "geckodriver": "^1.1.2",
+//    "chromedriver": "^2.23.1",
+//    "geckodriver": "^1.1.2",
     "selenium-webdriver": "^3.0.0-beta-2",
-    "phantomjs": ">=2.1",
-    "webdriverio": "^4.2.11",
+//    "phantomjs": ">=2.1",
+//    "webdriverio": "^4.2.11",
     "saucelabs": "1.3.0"
   },
   "devDependencies": {
