--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "chai": "^3.5.0",
     "mocha": "^2.4.5",
     "selenium-webdriver": "^3.0.0-beta-2",
-    "saucelabs": "1.3.0"
+    "saucelabs": "1.3.0",
+    "jQuery": "1.7.2"
   },
   "devDependencies": {
     "chromedriver": "^2.23.1",    
