--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ cache:
 
 addons:
   sauce_connect:
-    username: "Maartenconnect"
-    access_key: "4fd375a2-a635-42fb-860e-346e4d6691a6"
+    username: "Maaktnietzoveeluit"
+    access_key: "519926b3-9bcf-4500-9725-eb09b0a50d5d"
