--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ before_script:
   - python -m SimpleHTTPServer &
   - sleep 2
 
+
 cache:
   directories:
     - node_modules
 
 addons:
   sauce_connect:
+    sauce_connect: true
     username: "Maaktnietzoveeluit"
     access_key: "519926b3-9bcf-4500-9725-eb09b0a50d5d"
