--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "mocha": "^2.4.5",
     "selenium-webdriver": "^3.0.0-beta-2",
     "saucelabs": "1.3.0",
-    "jQuery": "1.7.2"
+    "jQuery": "1.7.2",
+    "wdio-sauce-service": "~0.1",
+    "webdriverio": "^4.2.11"
+
   },
   "devDependencies": {
     "chromedriver": "^2.23.1",    
@@ -39,7 +42,8 @@
   },
   "keywords": [
     "TravisCI",
-    "Node"
+    "Node",
+
   ]
 }
 
