--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ addons:
   sauce_connect:
     username: "Maaktnietzoveeluit"
     access_key: "519926b3-9bcf-4500-9725-eb09b0a50d5d"
+
+notifications:
+  email: false
